[c++client] fixed KUDU-1743

KUDU-1743: GetPendingErrors() not returning all errors after Flush()

A race has been discovered during Impala + Kudu testing: if working
with tables split among multiple tablet servers, a rare race condition
manifests itself as not having all the errorrs in the error collector
upon return from the KuduSession::Flush() method.

This patch fixes the race and adds corresponding test for that.

Change-Id: I3054d7f7c00dd937f4307fb01a5a0054b8ae27f7
Reviewed-on: http://gerrit.cloudera.org:8080/5048
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins